--- a/실습해보자/연습장.html
+++ b/실습해보자/연습장.html
@@ -4,29 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body>
-    <ul>
-      <li id="menu">
-        메뉴
-        <ul id="submenu" style="display: none">
-          <li>항목1</li>
-          <li>항목2</li>
-        </ul>
-      </li>
-    </ul>
-
     <script>
-      const menu = document.getElementById("menu");
-      const submenu = document.getElementById("submenu");
-
-      menu.addEventListener("mouseover", () => {
-        submenu.style.display = "block";
-      });
-
-      menu.addEventListener("mouseout", () => {
-        submenu.style.display = "none";
+      document.addEventListener("DOMContentLoaded", () => {
+        //
       });
     </script>
-  </body>
+  </head>
+  <body></body>
 </html>
