--- a/JavaScript_예제/07/7-2-4.html
+++ b/JavaScript_예제/07/7-2-4.html
@@ -3,28 +3,29 @@
   <head>
     <title></title>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const input = document.querySelector('input')
-        const button = document.querySelector('button')
-        const p = document.querySelector('p')
+      document.addEventListener("DOMContentLoaded", () => {
+        const input = document.querySelector("input");
+        const button = document.querySelector("button");
+        const p = document.querySelector("p");
 
-        button.addEventListener('click', () => {
+        // click event를 가져온 이유 - 글자를 쓰는 도중에 계속 바뀌는게 아니라 입력이 끝나고 계산 버튼 눌렀을 때 한번에 변환시키기 위함.
+        button.addEventListener("click", () => {
           // 입력을 숫자로 변환합니다.
-          const inch = Number(input.value)
+          const inch = Number(input.value);
           // 숫자가 아니라면 바로 리턴합니다.
           if (isNaN(inch)) {
-            p.textContent = '숫자를 입력해주세요'
-            return
+            p.textContent = "숫자를 입력해주세요";
+            return;
           }
           // 변환해서 출력합니다.
-          const cm = inch * 2.54
-          p.textContent = `${cm} cm`
-        })
-      })
+          const cm = inch * 2.54;
+          p.textContent = `${cm} cm`;
+        });
+      });
     </script>
   </head>
   <body>
-    <input type="text"> inch<br>
+    <input type="text" /> inch<br />
     <button>계산</button>
     <p></p>
   </body>
